2017-12-15  Keith Marshall  <keith@users.osdn.me>

	Implement a subset of the POSIX.1b-1993 clock API.

	* include/time.h [_POSIX_C_SOURCE >= 199309L]
	(clockid_t): New structured data type; define it opaquely, and...
	(CLOCK_REALTIME, CLOCK_MONOTONIC): ...declare these extern instances.
	[_POSIX_C_SOURCE >= 200809L] (gettimeofday): Mark it "deprecated".
	[_POSIX_C_SOURCE >= 199309L] (clock_getres, clock_gettime)
	(clock_settime): New functions; declare prototypes.

	* mingwex/clockapi.h mingwex/clockapi.c mingwex/clockres.c
	* mingwex/clockset.c mingwex/clocktime.c: New files; they implement
	the preceding clock instances, and associated API functions.

2017-12-14  Keith Marshall  <keith@users.osdn.me>

	Add support for POSIX.1 "obsolescence" warnings.

	* include/_mingwrt.h.in (__POSIX_1995_DEPRECATED)
	(__POSIX_2001_DEPRECATED, __POSIX_2008_DEPRECATED): New macros; define
	them, such as each is conditional on the specific value assigned to...
	[_POSIX_C_SOURCE]: ...this feature test macro, as the equivalent of...
	(__MINGW_ATTRIB_DEPRECATED): ...this, or of nothing, as appropriate.

2017-12-06  Keith Marshall  <keith@users.osdn.me>

	Prepare and publish MinGW.org WSL-5.0.2 release.

	* All files (wsl-5.0.2-release): Tag assigned.

	* Makefile.in (mingwrt-srcdist-package-files): Add reference...
	* $mingwrt_srcdir/*.sx: ...for files matching this template.

2017-12-02  Keith Marshall  <keith@users.osdn.me>

	Provide legacy OS work around for issue [#2357]

	* cpu_features.c: Delete; replace it with...
	* cpu_features.sx: ...this new assembly language file.

	* cpu_features.h [__ASSEMBLER__]
	(__cpu_features, __cpu_features_init): Suppress declarations.

	* Makefile (%.sx): Add $srcdir vpath reference.

2017-11-28  Keith Marshall  <keith@users.osdn.me>

	Handle indeterminate FLT_EVAL_METHOD; fix issue [#2352].

	* include/math.h [FLT_EVAL_METHOD == 0 || FLT_EVAL_METHOD == 1]
	(float_t, double_t): Define them explicitly, as appropriate for each